Updated goldstandard for fusion

--- a/usecase/create_goldstandard.ipynb
+++ b/usecase/create_goldstandard.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8b7880e7",
+   "id": "4e7bc7c8",
    "metadata": {},
    "source": [
     "# Goldstandard for Identity Resolution"
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79d42934",
+   "id": "48cac374",
    "metadata": {},
    "source": [
     "# Goldstandard for Data Fusion"
@@ -576,7 +576,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "9d105159",
+   "id": "f931a74a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -587,7 +587,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "d1d2c18c",
+   "id": "eddada01",
    "metadata": {},
    "outputs": [
     {
@@ -717,7 +717,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "83963b66",
+   "id": "9c6ed72e",
    "metadata": {},
    "outputs": [
     {
@@ -846,8 +846,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "2fc9729f",
+   "execution_count": 28,
+   "id": "4aeb1445",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_corr = corr_wiki2bbe.merge(corr_bbe2fdb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "5d5e24c8",
    "metadata": {},
    "outputs": [
     {
@@ -879,67 +889,11 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>68</th>\n",
-       "      <td>wiki_10519</td>\n",
-       "      <td>bbe_22104</td>\n",
-       "      <td>0.533333</td>\n",
-       "      <td>fdb_7342</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>147</th>\n",
-       "      <td>wiki_4987</td>\n",
-       "      <td>bbe_34916</td>\n",
-       "      <td>0.557895</td>\n",
-       "      <td>fdb_6835</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>96</th>\n",
-       "      <td>wiki_4023</td>\n",
-       "      <td>bbe_323</td>\n",
-       "      <td>0.700000</td>\n",
-       "      <td>fdb_14809</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>82</th>\n",
-       "      <td>wiki_10731</td>\n",
-       "      <td>bbe_1605</td>\n",
-       "      <td>0.500000</td>\n",
-       "      <td>fdb_12425</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>135</th>\n",
-       "      <td>wiki_1654</td>\n",
-       "      <td>bbe_46356</td>\n",
-       "      <td>0.500000</td>\n",
-       "      <td>fdb_10260</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>139</th>\n",
-       "      <td>wiki_10519</td>\n",
-       "      <td>bbe_26905</td>\n",
-       "      <td>0.533333</td>\n",
-       "      <td>fdb_7342</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>wiki_303</td>\n",
-       "      <td>bbe_393</td>\n",
+       "      <th>122</th>\n",
+       "      <td>wiki_5342</td>\n",
+       "      <td>bbe_13140</td>\n",
        "      <td>0.900000</td>\n",
-       "      <td>fdb_12556</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>wiki_11568</td>\n",
-       "      <td>bbe_7736</td>\n",
-       "      <td>0.800000</td>\n",
-       "      <td>fdb_6600</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>wiki_10519</td>\n",
-       "      <td>bbe_7610</td>\n",
-       "      <td>0.533333</td>\n",
-       "      <td>fdb_7342</td>\n",
+       "      <td>fdb_47</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
@@ -949,39 +903,11 @@
        "      <td>fdb_249</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>134</th>\n",
-       "      <td>wiki_11697</td>\n",
-       "      <td>bbe_47052</td>\n",
-       "      <td>0.500000</td>\n",
-       "      <td>fdb_3322</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>128</th>\n",
-       "      <td>wiki_1965</td>\n",
-       "      <td>bbe_42004</td>\n",
-       "      <td>0.525000</td>\n",
-       "      <td>fdb_3064</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>108</th>\n",
-       "      <td>wiki_997</td>\n",
-       "      <td>bbe_18113</td>\n",
-       "      <td>0.525000</td>\n",
-       "      <td>fdb_6583</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>wiki_3118</td>\n",
-       "      <td>bbe_3684</td>\n",
-       "      <td>0.500000</td>\n",
-       "      <td>fdb_5259</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>69</th>\n",
-       "      <td>wiki_3484</td>\n",
-       "      <td>bbe_16519</td>\n",
-       "      <td>0.556250</td>\n",
-       "      <td>fdb_4685</td>\n",
+       "      <th>91</th>\n",
+       "      <td>wiki_8818</td>\n",
+       "      <td>bbe_866</td>\n",
+       "      <td>0.900000</td>\n",
+       "      <td>fdb_4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -991,32 +917,74 @@
        "      <td>fdb_14809</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>65</th>\n",
-       "      <td>wiki_1546</td>\n",
-       "      <td>bbe_10158</td>\n",
-       "      <td>0.533333</td>\n",
-       "      <td>fdb_7145</td>\n",
+       "      <th>26</th>\n",
+       "      <td>wiki_303</td>\n",
+       "      <td>bbe_393</td>\n",
+       "      <td>0.900000</td>\n",
+       "      <td>fdb_12556</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>wiki_8319</td>\n",
-       "      <td>bbe_6107</td>\n",
-       "      <td>0.515686</td>\n",
-       "      <td>fdb_12933</td>\n",
+       "      <th>72</th>\n",
+       "      <td>wiki_8479</td>\n",
+       "      <td>bbe_580</td>\n",
+       "      <td>0.900000</td>\n",
+       "      <td>fdb_1415</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>126</th>\n",
-       "      <td>wiki_8156</td>\n",
-       "      <td>bbe_3677</td>\n",
-       "      <td>0.536364</td>\n",
-       "      <td>fdb_11669</td>\n",
+       "      <th>0</th>\n",
+       "      <td>wiki_1347</td>\n",
+       "      <td>bbe_4153</td>\n",
+       "      <td>0.900000</td>\n",
+       "      <td>fdb_14504</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>115</th>\n",
-       "      <td>wiki_8255</td>\n",
-       "      <td>bbe_30290</td>\n",
-       "      <td>0.531579</td>\n",
-       "      <td>fdb_14316</td>\n",
+       "      <th>75</th>\n",
+       "      <td>wiki_11568</td>\n",
+       "      <td>bbe_35996</td>\n",
+       "      <td>0.800000</td>\n",
+       "      <td>fdb_6600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>100</th>\n",
+       "      <td>wiki_1238</td>\n",
+       "      <td>bbe_9990</td>\n",
+       "      <td>0.900000</td>\n",
+       "      <td>fdb_1034</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>wiki_4899</td>\n",
+       "      <td>bbe_393</td>\n",
+       "      <td>0.900000</td>\n",
+       "      <td>fdb_12556</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>144</th>\n",
+       "      <td>wiki_10107</td>\n",
+       "      <td>bbe_1092</td>\n",
+       "      <td>0.900000</td>\n",
+       "      <td>fdb_9249</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>81</th>\n",
+       "      <td>wiki_8399</td>\n",
+       "      <td>bbe_5611</td>\n",
+       "      <td>0.900000</td>\n",
+       "      <td>fdb_6302</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>118</th>\n",
+       "      <td>wiki_11568</td>\n",
+       "      <td>bbe_4770</td>\n",
+       "      <td>0.800000</td>\n",
+       "      <td>fdb_6600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>64</th>\n",
+       "      <td>wiki_7232</td>\n",
+       "      <td>bbe_3617</td>\n",
+       "      <td>0.900000</td>\n",
+       "      <td>fdb_7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>113</th>\n",
@@ -1026,32 +994,60 @@
        "      <td>fdb_7145</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>31</th>\n",
-       "      <td>wiki_11130</td>\n",
-       "      <td>bbe_6293</td>\n",
-       "      <td>0.500000</td>\n",
-       "      <td>fdb_9524</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>56</th>\n",
-       "      <td>wiki_4992</td>\n",
-       "      <td>bbe_7930</td>\n",
-       "      <td>0.511111</td>\n",
-       "      <td>fdb_2767</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>67</th>\n",
-       "      <td>wiki_9566</td>\n",
-       "      <td>bbe_2410</td>\n",
+       "      <th>74</th>\n",
+       "      <td>wiki_4103</td>\n",
+       "      <td>bbe_17625</td>\n",
        "      <td>0.900000</td>\n",
-       "      <td>fdb_6888</td>\n",
+       "      <td>fdb_3031</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>60</th>\n",
-       "      <td>wiki_3919</td>\n",
-       "      <td>bbe_6613</td>\n",
-       "      <td>0.633333</td>\n",
-       "      <td>fdb_4358</td>\n",
+       "      <th>46</th>\n",
+       "      <td>wiki_11766</td>\n",
+       "      <td>bbe_1049</td>\n",
+       "      <td>0.900000</td>\n",
+       "      <td>fdb_11373</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>wiki_2100</td>\n",
+       "      <td>bbe_480</td>\n",
+       "      <td>0.900000</td>\n",
+       "      <td>fdb_249</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>106</th>\n",
+       "      <td>wiki_2629</td>\n",
+       "      <td>bbe_5088</td>\n",
+       "      <td>0.900000</td>\n",
+       "      <td>fdb_5472</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>wiki_2315</td>\n",
+       "      <td>bbe_9393</td>\n",
+       "      <td>0.900000</td>\n",
+       "      <td>fdb_5650</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>wiki_9393</td>\n",
+       "      <td>bbe_1936</td>\n",
+       "      <td>0.900000</td>\n",
+       "      <td>fdb_4904</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>77</th>\n",
+       "      <td>wiki_1427</td>\n",
+       "      <td>bbe_4209</td>\n",
+       "      <td>0.900000</td>\n",
+       "      <td>fdb_7821</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>141</th>\n",
+       "      <td>wiki_9337</td>\n",
+       "      <td>bbe_22947</td>\n",
+       "      <td>0.842857</td>\n",
+       "      <td>fdb_14809</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>138</th>\n",
@@ -1061,32 +1057,46 @@
        "      <td>fdb_13461</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>36</th>\n",
-       "      <td>wiki_3454</td>\n",
-       "      <td>bbe_8469</td>\n",
-       "      <td>0.500000</td>\n",
-       "      <td>fdb_4286</td>\n",
+       "      <th>12</th>\n",
+       "      <td>wiki_11568</td>\n",
+       "      <td>bbe_7736</td>\n",
+       "      <td>0.800000</td>\n",
+       "      <td>fdb_6600</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>86</th>\n",
-       "      <td>wiki_7724</td>\n",
-       "      <td>bbe_15888</td>\n",
-       "      <td>0.525000</td>\n",
-       "      <td>fdb_10568</td>\n",
+       "      <th>44</th>\n",
+       "      <td>wiki_8610</td>\n",
+       "      <td>bbe_4424</td>\n",
+       "      <td>0.900000</td>\n",
+       "      <td>fdb_3938</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>112</th>\n",
-       "      <td>wiki_8021</td>\n",
-       "      <td>bbe_51163</td>\n",
-       "      <td>0.533333</td>\n",
-       "      <td>fdb_11880</td>\n",
+       "      <th>67</th>\n",
+       "      <td>wiki_9566</td>\n",
+       "      <td>bbe_2410</td>\n",
+       "      <td>0.900000</td>\n",
+       "      <td>fdb_6888</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>42</th>\n",
-       "      <td>wiki_10519</td>\n",
-       "      <td>bbe_26517</td>\n",
-       "      <td>0.500000</td>\n",
-       "      <td>fdb_7342</td>\n",
+       "      <th>57</th>\n",
+       "      <td>wiki_1041</td>\n",
+       "      <td>bbe_52221</td>\n",
+       "      <td>0.800000</td>\n",
+       "      <td>fdb_8765</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>wiki_8285</td>\n",
+       "      <td>bbe_393</td>\n",
+       "      <td>0.900000</td>\n",
+       "      <td>fdb_12556</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>101</th>\n",
+       "      <td>wiki_3569</td>\n",
+       "      <td>bbe_7272</td>\n",
+       "      <td>0.900000</td>\n",
+       "      <td>fdb_3617</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1094,51 +1104,51 @@
       ],
       "text/plain": [
        "        wiki_id     bbe_id       sim     fdb_id\n",
-       "68   wiki_10519  bbe_22104  0.533333   fdb_7342\n",
-       "147   wiki_4987  bbe_34916  0.557895   fdb_6835\n",
-       "96    wiki_4023    bbe_323  0.700000  fdb_14809\n",
-       "82   wiki_10731   bbe_1605  0.500000  fdb_12425\n",
-       "135   wiki_1654  bbe_46356  0.500000  fdb_10260\n",
-       "139  wiki_10519  bbe_26905  0.533333   fdb_7342\n",
-       "26     wiki_303    bbe_393  0.900000  fdb_12556\n",
-       "12   wiki_11568   bbe_7736  0.800000   fdb_6600\n",
-       "18   wiki_10519   bbe_7610  0.533333   fdb_7342\n",
+       "122   wiki_5342  bbe_13140  0.900000     fdb_47\n",
        "15    wiki_5713    bbe_480  0.900000    fdb_249\n",
-       "134  wiki_11697  bbe_47052  0.500000   fdb_3322\n",
-       "128   wiki_1965  bbe_42004  0.525000   fdb_3064\n",
-       "108    wiki_997  bbe_18113  0.525000   fdb_6583\n",
-       "19    wiki_3118   bbe_3684  0.500000   fdb_5259\n",
-       "69    wiki_3484  bbe_16519  0.556250   fdb_4685\n",
+       "91    wiki_8818    bbe_866  0.900000      fdb_4\n",
        "9     wiki_9337  bbe_41227  0.800000  fdb_14809\n",
-       "65    wiki_1546  bbe_10158  0.533333   fdb_7145\n",
-       "30    wiki_8319   bbe_6107  0.515686  fdb_12933\n",
-       "126   wiki_8156   bbe_3677  0.536364  fdb_11669\n",
-       "115   wiki_8255  bbe_30290  0.531579  fdb_14316\n",
+       "26     wiki_303    bbe_393  0.900000  fdb_12556\n",
+       "72    wiki_8479    bbe_580  0.900000   fdb_1415\n",
+       "0     wiki_1347   bbe_4153  0.900000  fdb_14504\n",
+       "75   wiki_11568  bbe_35996  0.800000   fdb_6600\n",
+       "100   wiki_1238   bbe_9990  0.900000   fdb_1034\n",
+       "27    wiki_4899    bbe_393  0.900000  fdb_12556\n",
+       "144  wiki_10107   bbe_1092  0.900000   fdb_9249\n",
+       "81    wiki_8399   bbe_5611  0.900000   fdb_6302\n",
+       "118  wiki_11568   bbe_4770  0.800000   fdb_6600\n",
+       "64    wiki_7232   bbe_3617  0.900000      fdb_7\n",
        "113   wiki_1546  bbe_13536  0.900000   fdb_7145\n",
-       "31   wiki_11130   bbe_6293  0.500000   fdb_9524\n",
-       "56    wiki_4992   bbe_7930  0.511111   fdb_2767\n",
-       "67    wiki_9566   bbe_2410  0.900000   fdb_6888\n",
-       "60    wiki_3919   bbe_6613  0.633333   fdb_4358\n",
+       "74    wiki_4103  bbe_17625  0.900000   fdb_3031\n",
+       "46   wiki_11766   bbe_1049  0.900000  fdb_11373\n",
+       "16    wiki_2100    bbe_480  0.900000    fdb_249\n",
+       "106   wiki_2629   bbe_5088  0.900000   fdb_5472\n",
+       "34    wiki_2315   bbe_9393  0.900000   fdb_5650\n",
+       "7     wiki_9393   bbe_1936  0.900000   fdb_4904\n",
+       "77    wiki_1427   bbe_4209  0.900000   fdb_7821\n",
+       "141   wiki_9337  bbe_22947  0.842857  fdb_14809\n",
        "138   wiki_9604  bbe_49930  0.900000  fdb_13461\n",
-       "36    wiki_3454   bbe_8469  0.500000   fdb_4286\n",
-       "86    wiki_7724  bbe_15888  0.525000  fdb_10568\n",
-       "112   wiki_8021  bbe_51163  0.533333  fdb_11880\n",
-       "42   wiki_10519  bbe_26517  0.500000   fdb_7342"
+       "12   wiki_11568   bbe_7736  0.800000   fdb_6600\n",
+       "44    wiki_8610   bbe_4424  0.900000   fdb_3938\n",
+       "67    wiki_9566   bbe_2410  0.900000   fdb_6888\n",
+       "57    wiki_1041  bbe_52221  0.800000   fdb_8765\n",
+       "25    wiki_8285    bbe_393  0.900000  fdb_12556\n",
+       "101   wiki_3569   bbe_7272  0.900000   fdb_3617"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "corr_wiki2bbe.merge(corr_bbe2fdb).sample(30)"
+    "all_corr[all_corr[\"sim\"] >= 0.8].sample(30)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22ab1fca",
+   "id": "a601e052",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1146,7 +1156,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f06cea80",
+   "id": "4f88d7cc",
    "metadata": {},
    "outputs": [],
    "source": []
